--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
+    "gsap": "^3.13.0",
     "html-react-parser": "^5.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
